bk_ida/gccida/g0/expand_builtin_setjmp_receiver
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/expand_builtin_setjmp_receiver/src/builtins.c:979:18: error: expected ')'
 struct rtx_def *arg_pointer_save_area; // rax 
                 ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/expand_builtin_setjmp_receiver/src/function.h:533:36: note: expanded from macro 'arg_pointer_save_area'
#define arg_pointer_save_area (cfun->x_arg_pointer_save_area)
                                   ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/expand_builtin_setjmp_receiver/src/builtins.c:979:18: note: to match this '('
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/expand_builtin_setjmp_receiver/src/function.h:533:31: note: expanded from macro 'arg_pointer_save_area'
#define arg_pointer_save_area (cfun->x_arg_pointer_save_area)
                              ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/expand_builtin_setjmp_receiver/src/builtins.c:992:28: error: use of undeclared identifier 'elim_regs_12'
for ( i = 0LL; i <= 3 && ( elim_regs_12[i].from != 16 || *(int *)0x749B24[2 * i] != 6); ++i ) 
                           ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/expand_builtin_setjmp_receiver/src/builtins.c:992:74: error: subscripted value is not an array, pointer, or vector
for ( i = 0LL; i <= 3 && ( elim_regs_12[i].from != 16 || *(int *)0x749B24[2 * i] != 6); ++i ) 
                                                                 ~~~~~~~~^~~~~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/expand_builtin_setjmp_receiver/src/builtins.c:996:1: error: no member named 'x_arg_pointer_save_area' in 'struct rtx_def'
arg_pointer_save_area = get_arg_pointer_save_area( cfun); 
^~~~~~~~~~~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/expand_builtin_setjmp_receiver/src/function.h:533:38: note: expanded from macro 'arg_pointer_save_area'
#define arg_pointer_save_area (cfun->x_arg_pointer_save_area)
                               ~~~~  ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/expand_builtin_setjmp_receiver/src/builtins.c:997:19: error: no member named 'x_arg_pointer_save_area' in 'struct rtx_def'
v4 = copy_to_reg( arg_pointer_save_area); 
                  ^~~~~~~~~~~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/expand_builtin_setjmp_receiver/src/function.h:533:38: note: expanded from macro 'arg_pointer_save_area'
#define arg_pointer_save_area (cfun->x_arg_pointer_save_area)
                               ~~~~  ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/expand_builtin_setjmp_receiver/src/builtins.c:1006:42: error: use of undeclared identifier 'arg0'
v6 = gen_rtx_fmt_s( ASM_INPUT, VOIDmode, arg0); 
                                         ^
6 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/expand_builtin_setjmp_receiver/src/obj/builtins.o] Error 1
